toolbars: properly upgrade toolbar "hidden" to "kohidden" * ensure toolbar overflow handling still works correctly
(integrated from komodo (trunk) change 67275 by toddw)


git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@9059 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/toolbar.p.css
+++ b/src/chrome/komodo/skin/toolbar.p.css
@@ -69,7 +69,7 @@ toolbarbutton {
 toolbar[kohidden="true"],
 toolbarbutton[kohidden="true"]
 {
-    visibility: collapse;
+    display: none;
 }
 
 #main-toolboxrow toolbarbutton {
